--- a/.github/workflow/cicd.yaml
+++ b/.github/workflow/cicd.yaml
@@ -1,12 +1,13 @@
 name: CI/CD — Lazy Coder (Vite React)
 
 on:
-  push
-   
+  push:
+
 jobs:
-  b16_firstr_job:
+  b16_first_job:
     runs-on: ubuntu-latest
     steps:
-      - name; message
+      - name: message
         run: echo "welcome to githubactions by batch 16 champs"
+
     
